GT-2698 refactor UI elements to lock down HTML rendering